cabal-version: 3.0
version: 0.0
name: queue

common extensions
  default-extensions:
    DerivingStrategies
    BangPatterns
    ExplicitForAll
    InstanceSigs
    TypeApplications
    TypeFamilies
    ScopedTypeVariables
    MultiWayIf

common simple
  import: extensions
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends: base

library
  import: simple
  hs-source-dirs: .
  exposed-modules:
    Queue

test-suite queue
  import: simple
  type: exitcode-stdio-1.0
  hs-source-dirs: test/
  main-is: Spec.hs
  ghc-options: -Wno-orphans
  build-depends: queue
               , hedgehog ^>= 1.0

--benchmark rlist-bench
--  import: simple
--  type: exitcode-stdio-1.0
--  hs-source-dirs: bench/
--  main-is: Bench.hs
--  ghc-options: -Wno-orphans
--  build-depends: rlist
--               , criterion ^>= 1.5
